--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^6.2.8",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
